@@ -11,3 +11,13 @@ Wed Nov  7 06:55:38 GMT 2001
 Thu Mar 17 19:10:38 GMT 2005
         - 1.3 Added new tests and organized better
               Added pfuser command as example
+
+2006-10-16 14:44:14 +0100 (Mon, 16 Oct 2006)
+        - 1.4 Moved around
+              fixed pod errors
+              added POD tests
+
+Tue Mar 10 13:18:08 GMT 2009
+         - 1.5 Added FD Specific details in Linux::Fuser::FileDescriptor
+               (Requested by Tyler MacDonald)
+               Changed contact details
